--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.thymeleaf.encoding=UTF-8
 
 
 #Mamp database
-spring.datasource.url=jdbc:mysql://localhost:8890/cst339
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://activity4-1.mysql.database.azure.com:3306/activity
+spring.datasource.username=rootroot
+spring.datasource.password=S@mson847
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
