--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.url=jdbc:mysql://activity4-1.mysql.database.azure.com:3306/act
 spring.datasource.username=rootroot
 spring.datasource.password=S@mson847
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+java.runtime.version=17
