add system properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 
 
-#Mamp database
-spring.datasource.url=jdbc:mysql://activity4-1.mysql.database.azure.com:3306/activity
-spring.datasource.username=rootroot
-spring.datasource.password=S@mson847
+#AWS database
+spring.datasource.url=jdbc:mysql://google/cst339?socketFactory=com.google.cloud.sql.mysql.SocketFactory&cloudSqlInstance=googlecloudjoseph-abraham:us-central1-f:artful-patrol-437620-e0:us-central1:googlecloudjoseph-abraham
+spring.datasource.username=dbusername
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
