--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,17 @@ spring.thymeleaf.encoding=UTF-8
 logging.level.com.gcu=TRACE
 logging.level.com.gcu.util.Tracer=TRACE
 
-spring.datasource.url=jdbc:mysql://localhost:8890/FixDB
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://google/cst339?socketFactory=com.google.cloud.sql.mysql.SocketFactory&cloudSqlInstance=googlecloudjoseph-abraham:us-central1-f:artful-patrol-437620-e0:us-central1:googlecloudjoseph-abraham
+spring.datasource.username=dbusername
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://localhost:8890/FixDB
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #AWS database
 #spring.datasource.url=jdbc:mysql://google/cst339?socketFactory=com.google.cloud.sql.mysql.SocketFactory&cloudSqlInstance=googlecloudjoseph-abraham:us-central1-f:artful-patrol-437620-e0:us-central1:googlecloudjoseph-abraham
 #spring.datasource.username=dbusername
