--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.username=dbusername
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+JASYPT_ENCRYPTOR_PASSWORD = vlhxu72yfvr4ed2a
 #spring.datasource.url=jdbc:mysql://localhost:8890/FixDB
 #spring.datasource.username=root
 #spring.datasource.password=root
