--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,13 @@ spring.thymeleaf.encoding=UTF-8
 logging.level.com.gcu=TRACE
 logging.level.com.gcu.util.Tracer=TRACE
 
-spring.datasource.url=mysql://a5ogywheemfj9jvz:vlhxu72yfvr4ed2a@k9xdebw4k3zynl4u.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/a4bhk2q4fooiz3j5
+spring.datasource.url=jdbc:mysql://k9xdebw4k3zynl4u.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/a4bhk2q4fooiz3j5
 spring.datasource.username=a5ogywheemfj9jvz
 spring.datasource.password=vlhxu72yfvr4ed2a
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-JASYPT_ENCRYPTOR_PASSWORD = vlhxu72yfvr4ed2a
+# Encryption key for sensitive information (without spaces around `=`)
+JASYPT_ENCRYPTOR_PASSWORD=vlhxu72yfvr4ed2a
 #spring.datasource.url=jdbc:mysql://localhost:8890/FixDB
 #spring.datasource.username=root
 #spring.datasource.password=root
