--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=vlhxu72yfvr4ed2a
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Encryption key for sensitive information (without spaces around `=`)
-JASYPT_ENCRYPTOR_PASSWORD=vlhxu72yfvr4ed2a
+#JASYPT_ENCRYPTOR_PASSWORD=vlhxu72yfvr4ed2a
 #spring.datasource.url=jdbc:mysql://localhost:8890/FixDB
 #spring.datasource.username=root
 #spring.datasource.password=root
